--- a/dist1.html
+++ b/dist1.html
@@ -156,7 +156,7 @@ $(function () {
     "url": "https://bestso-2ad0.restdb.io/rest/distribution",
     "method": "POST",
     "headers": {
-      "x-apikey": apikey,
+      "x-apikey": "5d272713e25f837b3b80a374",
       "content-type": "application/json"
     },
     "processData": false
@@ -168,7 +168,7 @@ $(function () {
      "method": "POST",
      "contentType": false,
      "headers": {
-       "x-apikey": apikey
+       "x-apikey": "5d272713e25f837b3b80a374"
      },
      "cache": false,
      "processData": false
